--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
     {% endfor %}
     </ul>
     <div class="copyright small">
-       Copyright © ITSSL<br>
+       Copyright © US LAYER<br>
     </div>
 </footer>
 
