--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,3 +44,4 @@
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/theme.js"></script>
+<script src="{{ site.baseurl }}/assets/js/popper.min.js"></script>
