--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@ gtag('config', '{{site.ganalytics}}');
 
 <!-- Menu Navigation
 ================================================== -->
-{% include main_nav.html %}
+{% include nav.html %}
 
 
 <!-- Container
