--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,6 +42,5 @@
 <!-- JavaScript
 ================================================== -->
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/theme.js"></script>
-<script src="{{ site.baseurl }}/assets/js/popper.min.js"></script>
