--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,4 +43,4 @@
 ================================================== -->
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js"></script>
-<script src="{{ site.baseurl }}/assets/js/theme.js"></script>
+<!--<script src="{{ site.baseurl }}/assets/js/theme.js"></script> -->
