--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,6 +41,6 @@
 
 <!-- JavaScript
 ================================================== -->
-<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>
+<!--<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script> -->
 <script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js"></script>
 <!--<script src="{{ site.baseurl }}/assets/js/theme.js"></script> -->
