--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <!-- Your Chat plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
-<!--
+
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "{{site.fbpageid}}");
@@ -23,7 +23,7 @@
         js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
-    </script> -->
+    </script> 
 
 
 <footer class="footer container text-center">
