--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,27 +26,13 @@
     </script>
 
 
-<footer class="footer container text-center">
-  <ul class="p-0 mb-1 small">
-    {% for item in site.data.menus.footermenu %}
-    <li>
-      <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
-    </li>
-    {% endfor %}
-    </ul>
-    <div class="copyright small">
-       Copyright © US LAYER<br>
-    </div>
-</footer>
-
-
 <div class="container">
   <footer class="row row-cols-5 py-5 my-5 border-top">
     <div class="col">
       <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
         <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
       </a>
-      <p class="text-muted">© 2021</p>
+      <p class="text-muted">Copyright © US LAYER</p>
     </div>
 
     <div class="col">
