--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
           <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
             <li>
               <a href="#" class="nav-link text-secondary">
-                <svg class="bi d-block mx-auto mb-1" width="24" height="24"><use xlink:href="#home"></use></svg>
+                <i class="bi bi-house"></i>
                 Home
               </a>
             </li>
