--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -38,7 +38,7 @@
       <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
         <li class="nav-item col-6 col-md-auto text-dark">
           <a class="nav-link p-2" href="https://github.com/twbs" target="_blank" rel="noopener">
-            <i class="bi bi-facebook"></i>
+            <i width="36" height="36" class="bi bi-facebook"></i>
             <small class="d-md-none ms-2">GitHub</small>
           </a>
         </li>
