--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -47,9 +47,9 @@
         </li>
         <li class="nav-item col-6 col-md-auto text-dark">
           <a class="nav-link px-2" style="color:#1DA1F2" href="{{site.social.twitter}}" target="_blank" rel="noopener">
-            <i class="bi bi-twitter">
+            <i class="bi bi-twitter" style="width:24px">
               <title>Twitter</title>
-            </i>   
+            </i>
             <small class="d-md-none ms-2">Twitter</small>
           </a>
         </li>
