--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -46,10 +46,10 @@
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link px-2" style="color:#1DA1F2;width:24px" href="{{site.social.twitter}}" target="_blank" rel="noopener">
-            <i class="bi bi-twitter">
+          <a class="nav-link px-2" style="color:#1DA1F2;" href="{{site.social.twitter}}" target="_blank" rel="noopener">
+            <h3><i class="bi bi-twitter">
               <title>Twitter</title>
-            </i>
+            </i></h3>
             <small class="d-md-none ms-2">Twitter</small>
           </a>
         </li>
