--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -54,7 +54,7 @@
         </li>
       </ul>
 
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="/docs/5.1/getting-started/download/">Download</a>
+      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3" href="#">Download</a>
     </div>
   </nav>
 </header>
