--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,8 +19,8 @@
         <li class="nav-item col-6 col-md-auto text-dark">
           <a class="nav-link p-2" href="/docs/5.1/getting-started/introduction/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
         </li>
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2 active" aria-current="true" href="/docs/5.1/examples/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Examples</a>
+        <li class="nav-item col-6 col-md-auto">
+          <a class="nav-link p-2 active text-dark" aria-current="true" href="/docs/5.1/examples/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Examples</a>
         </li>
         <li class="nav-item col-6 col-md-auto text-dark">
           <a class="nav-link p-2" href="https://icons.getbootstrap.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Icons');" target="_blank" rel="noopener">Icons</a>
