--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,24 +13,14 @@
 
     <div class="navbar-collapse collapse" id="bdNavbar" style="">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2" href="/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Home</a>
-        </li>
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2" href="/docs/5.1/getting-started/introduction/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Docs</a>
+        <li class="nav-item col-6 col-md-auto">
+          <a class="nav-link p-2 active text-dark" aria-current="true" href="{{site.baseurl}}">Home</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2 active text-dark" aria-current="true" href="/docs/5.1/examples/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Examples</a>
+          <a class="nav-link p-2 text-dark" aria-current="true" href="#">Examples</a>
         </li>
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2" href="https://icons.getbootstrap.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Icons');" target="_blank" rel="noopener">Icons</a>
-        </li>
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2" href="https://themes.getbootstrap.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Themes');" target="_blank" rel="noopener">Themes</a>
-        </li>
-        <li class="nav-item col-6 col-md-auto text-dark">
-          <a class="nav-link p-2" href="https://blog.getbootstrap.com/" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Blog');" target="_blank" rel="noopener">Blog</a>
-        </li>
+
+
       </ul>
 
       <hr class="d-md-none text-white-50">
