--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
 
     </button>
 
-    <div class="navbar-collapse collapse" id="bdNavbar" style="">
+    <div class="navbar-collapse collapse" id="bdNavbar" style="font-weight:500;">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2 active text-dark" aria-current="true" href="{{site.baseurl}}">Home</a>
