--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,6 +13,15 @@
 
     <div class="navbar-collapse collapse" id="bdNavbar" style="font-weight:500;">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
+
+        {% for item in site.data.menus.topmenu %}
+          <li class="nav-item col-6 col-md-auto">
+            <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2 active text-dark" alt="{{item.title}}">{{item.title}}</a>
+          </li>
+        {% endfor %}
+
+
+
         <li class="nav-item col-6 col-md-auto">
           <a class="nav-link p-2 active text-dark" aria-current="true" href="{{site.baseurl}}">Home</a>
         </li>
