--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -12,6 +12,11 @@ Just customize your theme here.
     text-decoration: none;
 }
 
+.bd-footer a:hover, .bd-footer a:focus {
+    color: #0d6efd;
+    text-decoration: underline;
+}
+
 .noto {
   font-family: "PT Sans",sans-serif, "Noto Sans";
 }
