--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -45,7 +45,7 @@
         <ul class="list-unstyled">
           {% for item in site.data.menus.footermenu %}
             <li class="mb-2">
-              <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-0 text-muted" alt="{{item.title}}">{{item.title}}</a>
+              <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" alt="{{item.title}}">{{item.title}}</a>
             </li>
           {% endfor %}
         </ul>
