--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,8 +35,7 @@
           <span class="fs-5">US LAYER</span>
         </a>
         <ul class="list-unstyled small text-muted">
-          <li class="mb-2">Designed and built with all the love in the world by the <a href="/docs/5.0/about/team/">Bootstrap team</a> with the help of <a href="https://github.com/twbs/bootstrap/graphs/contributors">our contributors</a>.</li>
-          <li class="mb-2">Code licensed <a href="https://github.com/twbs/bootstrap/blob/main/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.</li>
+          <li class="mb-2">Hear as USLAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a>Web developing and designing,</a> <a>Software developing,</a> Networking, <a>CCTV</a> and many more…</li>
           <li class="mb-2">Copyright © US LAYER</li>
         </ul>
       </div>
