--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
           <span class="fs-5">US LAYER</span>
         </a>
         <ul class="list-unstyled small text-muted">
-          <li class="mb-2">Hear as USLAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a>Web developing and designing,</a> <a>Software developing,</a> Networking, <a>CCTV</a> and many more…</li>
+          <li class="mb-2">Hear as USLAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a herf="#">Web developing and designing,</a> <a herf="#">Software developing,</a> Networking, <a herf="#">CCTV</a> and many more…</li>
           <li class="mb-2">Copyright © US LAYER</li>
         </ul>
       </div>
