--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
 
     </button>
 
-    <div class="navbar-collapse collapse" id="bdNavbar" style="font-weight:500;">
+    <div class="navbar-collapse collapse" id="bdNavbar">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
 
         {% for item in site.data.menus.topmenu %}
