--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,6 +7,16 @@ Just customize your theme here.
   src: url(https://uslayer.github.io/assets/noto.ttf);
 }
 
+.bd-navbar a {
+    color: #495057;
+    text-decoration: none;
+}
+
+.bd-navbar a:hover, .bd-navbar a:focus {
+    color: #0d6efd;
+}
+
+
 .bd-footer a {
     color: #495057;
     text-decoration: none;
