--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
 
         {% for item in site.data.menus.topmenu %}
           <li class="nav-item col-6 col-md-auto">
-            <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2 active text-dark" alt="{{item.title}}">{{item.title}}</a>
+            <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2" alt="{{item.title}}">{{item.title}}</a>
           </li>
         {% endfor %}
 
