--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,13 +7,10 @@ Just customize your theme here.
   src: url(https://uslayer.github.io/assets/noto.ttf);
 }
 
-.bd-navbar a {
-    color: #495057;
-    text-decoration: none;
-}
-
-.bd-navbar a:hover, .bd-navbar a:focus {
-    color: #0d6efd;
+.bd-navbar .navbar-nav .nav-link {
+    padding-right: .25rem;
+    padding-left: .25rem;
+    color: #0000;
 }
 
 
