--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,6 +16,7 @@ Just customize your theme here.
     padding-right: .25rem;
     padding-left: .25rem;
     color: #000;
+    font-weight: 500;
 }
 
 
