--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@ gtag('config', '{{site.ganalytics}}');
 
 <!-- Container
 ================================================== -->
-<main class="container">
+<main>
       {{ content }}
 </main>
 
