--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
 
       <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link px-2" style="color:#4267B2" href="{{site.social.facebook}}" target="_blank" rel="noopener">
+          <a class="nav-link px-2" href="{{site.social.facebook}}" target="_blank" rel="noopener">
             <h3><i class="bi bi-facebook">
               <title>Facebook</title>
             </i></h3>
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link px-2" style="color:#1DA1F2;" href="{{site.social.twitter}}" target="_blank" rel="noopener">
+          <a class="nav-link px-2" href="{{site.social.twitter}}" target="_blank" rel="noopener">
             <h3><i class="bi bi-twitter">
               <title>Twitter</title>
             </i></h3>
