--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,7 @@ Just customize your theme here.
 
 
 .noto {
-  font-family: "PT Sans",sans-serif, "Noto Sans";
+  font-family: "Noto Sans";
 }
 
 .article-post a {
