--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,14 +3,14 @@ Don't want to use sass and simply modify the stylesheet in the old css fashion?
 Just customize your theme here.
 ================================================== */
 @font-face {
-  font-family: "Noto Sans";
+  font-family: "Noto Sinhala";
   src: url(https://uslayer.github.io/assets/noto.ttf);
 }
 
 
 
 .noto {
-  font-family: "Noto Sans";
+  font-family: "Noto Sinhala";
 }
 
 .article-post a {
