--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,7 @@ Just customize your theme here.
 
 
 .noto {
-  font-family: "Noto Sinhala";
+  font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji", "Noto Sinhala";
 }
 
 .article-post a {
