--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#"> Quickly සිංහල</a>
+      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#">සිංහල</a>
     </div>
   </nav>
 </header>
