--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -7,7 +7,7 @@ Just customize your theme here.
   src: url(https://uslayer.github.io/assets/noto.ttf);
 }
 
-.my-5 {
+.my-5b {
     margin-bottom: -3rem!important;
 }
 
