--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-        <h5>Links</h5>
+        <h5>LINKS</h5>
         <ul class="list-unstyled">
           {% for item in site.data.menus.footermenu %}
             <li class="mb-2">
@@ -50,22 +50,22 @@
         </ul>
       </div>
       <div class="col-6 col-lg-2 mb-3">
-        <h5>Guides</h5>
+        <h5>HOSTING & PRODUCTS</h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="/docs/5.0/getting-started/">Getting started</a></li>
-          <li class="mb-2"><a href="/docs/5.0/examples/starter-template/">Starter template</a></li>
-          <li class="mb-2"><a href="/docs/5.0/getting-started/webpack/">Webpack</a></li>
-          <li class="mb-2"><a href="/docs/5.0/getting-started/parcel/">Parcel</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/optimized-wordpress-hosting" target="_blank">WordPress Hosting</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/cloudhosting" target="_blank">Cloud Hosting</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/web-hosting/linux-hosting" target="_blank">Linux Hosting</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/website-design" target="_blank">Website Builder</a></li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 mb-3">
-        <h5>Projects</h5>
+        <h5>DOMAINS</h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="https://github.com/twbs/bootstrap">Bootstrap 5</a></li>
-          <li class="mb-2"><a href="https://github.com/twbs/bootstrap/tree/v4-dev">Bootstrap 4</a></li>
-          <li class="mb-2"><a href="https://github.com/twbs/icons">Icons</a></li>
-          <li class="mb-2"><a href="https://github.com/twbs/rfs">RFS</a></li>
-          <li class="mb-2"><a href="https://github.com/twbs/bootstrap-npm-starter">npm starter</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/" target="_blank">Register Domain Name</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-registration-price" target="_blank">View Domain Pricing</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-whois-lookup" target="_blank">Whois Lookup</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/free-with-domain-registration" target="_blank">Free with Every Domain</a></li>
+          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-name-suggestion-tool" target="_blank">Name Suggestion Tool</a></li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 mb-3">
