--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
-        <h5>LINKS</h5>
+        <h5>QUICK LINKS</h5>
         <ul class="list-unstyled">
           {% for item in site.data.menus.footermenu %}
             <li class="mb-2">
