--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,8 +42,10 @@
           </a>
         </li>
       </ul>
-
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#" disabled>සිංහල</a>
+      <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
+        test
+        <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#" disabled>සිංහල</a>
+      </span>
     </div>
   </nav>
 </header>
