--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,4 +76,5 @@
 <!-- JavaScript
 ================================================== -->
 <!--<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script> -->
-<script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/popper.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
