--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -76,5 +76,5 @@
 <!-- JavaScript
 ================================================== -->
 <!--<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script> -->
-<script src="{{ site.baseurl }}/assets/js/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>
