--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -42,12 +42,8 @@
           </a>
         </li>
       </ul>
-      <span class="d-inline-block" tabindex="0" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-content="Disabled popover">
-        <button class="btn btn-primary" type="button" disabled>Disabled button</button>
-      </span>
-      <a tabindex="0" class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="අපගේ සිංහල වෙබ් අඩවිය තවමත් ප්‍රකාශයට පත්කර නොමැත.">
-        සමාවන්න!
-      </a>
+
+      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#">සිංහල</a>
     </div>
   </nav>
 </header>
