--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,6 +43,10 @@
         </li>
       </ul>
 
+      <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Tooltip on top">
+        Tooltip on top
+      </button>
+
       <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#">සිංහල</a>
     </div>
   </nav>
