--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,9 @@ gtag('js', new Date());
 gtag('config', '{{site.ganalytics}}');
 </script>
 {% endif %}
-
+<script>
+$("[data-toggle=popover]").popover();
+</script>
 </head>
 
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
