--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -77,3 +77,4 @@
 ================================================== -->
 <!--<script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script> -->
 <script src="{{ site.baseurl }}/assets/js/bootstrap.bundle.min.js"></script>
+<script src="{{ site.baseurl }}/assets/js/test.min.js"></script>
