--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,7 +43,7 @@
         </li>
       </ul>
 
-      <button type="button" class="btn btn-lg btn-danger" data-bs-toggle="popover" title="Popover title" data-bs-content="And here's some amazing content. It's very engaging. Right?">Click to toggle popover</button>
+      <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
 
       <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#">සිංහල</a>
     </div>
