--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,9 +43,8 @@
         </li>
       </ul>
 
-      <a tabindex="0" class="btn btn-lg btn-danger" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="Dismissible popover" data-bs-content="And here's some amazing content. It's very engaging. Right?">Dismissible popover</a>
-
-      <a class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" href="#">සිංහල</a>
+      <a tabindex="0" class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="සමාවන්න!" data-bs-content="අපගේ වෙබ් අඩවිය සිංහලයට කරමින් පවතී.">සිංහල</a>
+    
     </div>
   </nav>
 </header>
