--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -43,8 +43,8 @@
         </li>
       </ul>
 
-      <a tabindex="0" class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="සමාවන්න!" data-bs-content="අපගේ වෙබ් අඩවිය සිංහලයට කරමින් පවතී.">සිංහල</a>
-    
+      <a tabindex="0" class="btn btn-bd-download d-lg-inline-block my-2 my-md-0 ms-md-3 noto" role="button" data-bs-toggle="popover" data-bs-trigger="focus" title="සමාවන්න!" data-bs-content="අපගේ සිංහල වෙබ් අඩවිය තවමත් ප්‍රකාශයට පත්කර නොමැත. 😔">සිංහල</a>
+
     </div>
   </nav>
 </header>
