--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -18,7 +18,7 @@ Just customize your theme here.
       font-size: 2rem;
 }
 
-.review_btn bt-txt{
+.review_btn .bt-txt{
     margin-bottom: 10px;
 }
 
