--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,6 +20,7 @@ Just customize your theme here.
 .review_btn div{
   font-size: 1.5rem;
   margin-left: 10px;
+  font-style: normal;
 }
 
 .my-5b {
