--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,7 +17,7 @@ Just customize your theme here.
       font-size: 2rem;
 }
 
-.review_btn div{
+.review_btn small{
   font-size: 1.2rem;
   margin-left: 15px;
   font-style: normal;
