--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-lg-3 mb-3">
         <a class="d-inline-flex align-items-center mb-2 link-dark text-decoration-none" href="/" aria-label="Bootstrap">
-          <<img src="/assets/images/uslayer-ico.svg" alt="icon">
+          <img src="/assets/images/uslayer-ico.svg" style="width: 40px;" alt="icon">
           <span class="fs-5">US LAYER</span>
         </a>
         <ul class="list-unstyled small text-muted">
