--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="google-site-verification" content="246QM4Xki0jvdh3ANoDKXe-UOPQ23He8W83KY4P5ttA" />
 <link rel="icon" href="{{ site.baseurl }}/{{site.favicon}}">
 
 <!-- <title>{{ page.title }} | {{site.title}}</title> -->
