--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <header class="navbar navbar-expand-md bd-navbar">
   <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
-    <a class="navbar-brand p-0 me-2" href="{{site.baseurl}}" aria-label="US LAYER">
+    <a class="navbar-brand p-0 me-2" href="/" aria-label="US LAYER">
       <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="us layer logo" style="width:150px">
     </a>
 
