--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
 
-          <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="/">
+          <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.domain}}">
           {% if site.logo %}
           <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" alt="logo">
           {% else %}
