--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<!-- Post Featured Image 
+<!-- Post Featured Image
 {% if page.image %}
 <div class="text-center mx-auto mb-5">
   <img class="featured-image text-center mx-auto rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">
@@ -9,20 +9,19 @@ layout: default
 {% endif %}
 <!-- End Featured Image -->
 
-<div class="col-lg-8 mx-auto">
 
-  <div class="mainheading">
-    <h1 class="posttitle">{{ page.title }}</h1>
-  </div>
 
-  <div class="article-post serif-font">
-    {{content}}
-  </div>
 
-  {% if page.comments == true %}
-  <div id="comments">
-      {% include disqus.html %}
-  </div>
-  {% endif %}
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">{{ page.title }}</h1>
+        {{content}}
+      </div>
+    </div>
 
-</div>
+
+    {% if page.comments == true %}
+    <div id="comments">
+        {% include disqus.html %}
+    </div>
+    {% endif %}
