--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,8 @@ layout: default
 
 
 
+<div class="container py-4">
+
 
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
@@ -25,3 +27,5 @@ layout: default
         {% include disqus.html %}
     </div>
     {% endif %}
+
+  </div>
