--- a/_layouts/blog-si.html
+++ b/_layouts/blog-si.html
@@ -9,7 +9,9 @@
 
 {% seo %}
 
-<link href="{{ site.baseurl }}/assets/css/theme.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/bootstrap.min.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/btrap.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 <!-- custom CSS - Remove this if you don't use it or choose to customize the stylesheet with sass-->
 <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet">
