--- a/_layouts/blog-si.html
+++ b/_layouts/blog-si.html
@@ -36,7 +36,7 @@ gtag('config', '{{site.ganalytics}}');
 
 <!-- Menu Navigation
 ================================================== -->
-{% include main_nav.html %}
+{% include nav.html %}
 
 
 <!-- Container
