--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,20 +52,20 @@
       <div class="col-6 col-lg-3 mb-3">
         <h5>HOSTING & PRODUCTS</h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/optimized-wordpress-hosting" target="_blank">WordPress Hosting</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/cloudhosting" target="_blank">Cloud Hosting</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/web-hosting/linux-hosting" target="_blank">Linux Hosting</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/website-design" target="_blank">Website Builder</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/optimized-wordpress-hosting" target="_blank">WordPress Hosting</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/cloudhosting" target="_blank">Cloud Hosting</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/web-hosting/linux-hosting" target="_blank">Linux Hosting</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/website-design" target="_blank">Website Builder</a></li>
         </ul>
       </div>
       <div class="col-6 col-lg-3 mb-3">
         <h5>DOMAINS</h5>
         <ul class="list-unstyled">
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/" target="_blank">Register Domain Name</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-registration-price" target="_blank">View Domain Pricing</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-whois-lookup" target="_blank">Whois Lookup</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/free-with-domain-registration" target="_blank">Free with Every Domain</a></li>
-          <li class="mb-2"><a href="https://uslayer.supersite2.myorderbox.com/domain-registration/domain-name-suggestion-tool" target="_blank">Name Suggestion Tool</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/domain-registration/" target="_blank">Register Domain Name</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/domain-registration/domain-registration-price" target="_blank">View Domain Pricing</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/domain-registration/domain-whois-lookup" target="_blank">Whois Lookup</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/domain-registration/free-with-domain-registration" target="_blank">Free with Every Domain</a></li>
+          <li class="mb-2"><a href="https://hosting.uslayer.com/domain-registration/domain-name-suggestion-tool" target="_blank">Name Suggestion Tool</a></li>
         </ul>
       </div>
     </div>
