--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,6 +15,16 @@
     <div class="navbar-collapse collapse" id="bdNavbar">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
 
+
+        {% for node in site.pages %}
+            {% if page.url == node.url %}
+              <li class="active"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
+            {% else %}
+              <li><a href="{{node.url}}">{{node.title}}</a></li>
+            {% endif %}
+          {% endfor %}
+
+
         {% for item in site.data.menus.topmenu %}
           <li class="nav-item col-6 col-md-auto">
             <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2" alt="{{item.title}}">{{item.title}}</a>
