--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,7 @@
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
 
 
-        {% for node in site.pages %}
+        {% for node in site.data.menus.topmenu %}
             {% if page.url == node.url %}
               <li class="active"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
             {% else %}
