--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,7 @@
 
         {% for node in site.data.menus.topmenu %}
             {% if page.url == node.url %}
-              <li class="active"><a href="{{node.url}}" class="active">{{node.title}}</a></li>
+              <li class="active"><a href="{{node.url}}" class="nav-link p2 active">{{node.title}}</a></li>
             {% else %}
               <li><a href="{{node.url}}">{{node.title}}</a></li>
             {% endif %}
