--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@ gtag('config', '{{site.ganalytics}}');
 <!-- Container
 ================================================== -->
 <main>
+      <p> page.url == /{% endunless %}{{item.url}}</p>
       {{ content }}
 </main>
 
