--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@ gtag('config', '{{site.ganalytics}}');
 <!-- Container
 ================================================== -->
 <main>
-      <p> page.url == /{% endunless %}{{item.url}}</p>
+      <p> {{page.url}} == /{{item.url}}</p>
       {{ content }}
 </main>
 
