--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,11 +14,11 @@
 
     <div class="navbar-collapse collapse" id="bdNavbar">
       <ul class="navbar-nav flex-row flex-wrap bd-navbar-nav pt-2 py-md-0">
-
+       
 
         {% for item in site.data.menus.topmenu %}
           <li class="nav-item col-6 col-md-auto">
-            {% if page.url == "/{% endunless %}{{item.url}}" %}
+            {% if page.url == "/{{item.url}}" %}
               <b><a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2" alt="{{item.title}}">{{item.title}}</a></b>
             {% else %}
               <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2" alt="{{item.title}}">{{item.title}}</a>
