--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,11 @@ layout: default
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">{{ page.title }}</h1>
-        {{ page.url }} == /{{ item.url }}
+
+        {% for item in site.data.menus.topmenu %}
+          {{ page.url }} == /{{ item.url }}
+        {% endfor %}
+        
         {{content}}
       </div>
     </div>
