--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,7 +72,7 @@
         </ul>
       </div>
     </div>
-    <p class="text-center text-muted border-top">Copyright © US LAYER</p>
+    <p class="text-center text-muted border-top"><a href="/LICENSE.txt" target="_blank">Copyright © US LAYER</a></p>
   </div>
 </footer>
 
